plugins {
    id 'java'
    id 'application'
}

group 'com.github.zare88.interpreter_with_sealed_classes_in_java'
description """
The source code copied from 
https://github.com/pavansolapure/opencodez-samples/tree/master/JavaPatterns/src/com/opencodez/patterns/interpreter
and converted to support sealed classes
"""
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

application {
    mainClassName = 'com.opencodez.patterns.interpreter.client.InterpreterClient'
}

